--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Organization and project keys are displayed in the right sidebar of the project homepage
 # sonar.organization=<replace this by your organization key>
-sonar.projectKey=SQ2023_2220653_P2
+sonar.projectKey=SQ2023_123
 sonar.host.url=https://sonar.creis.pt
 
 # --- optional properties ---
